Call: handle google relay reply after channel dies

Previously, if the Google relay server replied to our HTTP request after
the Call channel had already gone away, we'd crash.

Fixes: <http://bugs.freedesktop.org/show_bug.cgi?id=39768>